nobase_nodist_include_HEADERS = \
	Core/ObjectWriter.h \
	Core/Application.h \
	Core/AnalysisUsage.h \
	Core/AnalysisResolver.h \
	Core/Pass.h \
	Core/PassAnalysisSupport.h \
	Core/InitializePasses.h \
	ADT/Bits/HashBase.tcc \
	ADT/Bits/HashIterator.tcc \
	ADT/Bits/HashTable.tcc \
	ADT/Bits/IList.tcc \
	ADT/Bits/TreeIterator.h \
	ADT/Bits/TreeNodeAllocator.h \
	ADT/Bits/TreeNode.h \
	ADT/Any.h \
	ADT/ArrayRef.h \
	ADT/BinaryTree.h \
	ADT/Color.h \
	ADT/Digraph.h \
	ADT/EditDistance.h \
	ADT/Flags.h \
	ADT/HashIterator.h \
	ADT/HashTable.h \
	ADT/If.h \
	ADT/IList.h \
	ADT/IListIterator.h \
	ADT/IListNode.h \
	ADT/OwningPtr.h \
	ADT/Rope.h \
	ADT/StringHasher.h \
	ADT/StringHashTable.h \
	ADT/StringList.h \
	ADT/StringMap.h \
	ADT/StringRef.h \
	ADT/StringSwitch.h \
	ADT/TriState.h \
	ADT/TriValue.h \
	ADT/TypeSwitch.h \
	ADT/TypeTag.h \
	ADT/TypeTraits.h \
	ADT/Uncopyable.h \
	Target/TargetBackend.h \
	IR/ComputeOperator.h \
	IR/ComputeOperand.h \
	IR/ComputeMemOperand.h \
	IR/ComputeRegOperand.h \
	IR/Tensor/InitializerProxy.h
